fixed info icon alignment, added popup with CDC link

--- a/src/App.css
+++ b/src/App.css
@@ -68,3 +68,12 @@
 #eligibility{
   margin-top: 100px;
 }
+
+.infoIconWrapper{
+  display: flex;
+  align-items: center;
+}
+.infoIcon{
+  margin-left: 5px;
+  color: white;
+}
